[STYLE] Always show vertical scrollbar to stop horizontal jumping

--- a/client/app/sass/default.scss
+++ b/client/app/sass/default.scss
@@ -5,10 +5,11 @@
 @import "components/heading";
 
 html, body {
+    background-color: $off-white;
     color: $faded-black;
     font-family: 'Montserrat', sans-serif;
-    background-color: $off-white;
     line-height: 1.5;
+    overflow-y: scroll;
 }
 
 a {
